[gd_scene load_steps=11 format=3 uid="uid://dnhcykjlomeaj"]

[ext_resource type="Script" path="res://EnemyBullet.gd" id="1_ja5ih"]
[ext_resource type="Texture2D" uid="uid://dbrar35ghbe3g" path="res://Assests/Tech Dungeon Roguelite - Asset Pack (DEMO)/SpriteSheets/Sprite_Sheet_Main.png" id="2_oktdc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2vmen"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4wki"]
atlas = ExtResource("2_oktdc")
region = Rect2(2772, 975, 44, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xguy"]
atlas = ExtResource("2_oktdc")
region = Rect2(2692, 975, 44, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dj3s"]
atlas = ExtResource("2_oktdc")
region = Rect2(2584, 1128, 68, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j880"]
atlas = ExtResource("2_oktdc")
region = Rect2(2652, 1128, 68, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wen6"]
atlas = ExtResource("2_oktdc")
region = Rect2(2720, 1128, 68, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_icjd6"]
atlas = ExtResource("2_oktdc")
region = Rect2(2788, 1128, 68, 94)

[sub_resource type="SpriteFrames" id="SpriteFrames_xy3nw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4wki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xguy")
}],
"loop": true,
"name": &"Bullet",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dj3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j880")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wen6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icjd6")
}],
"loop": true,
"name": &"BulletDestroyed",
"speed": 5.0
}]

[node name="Area2D" type="Area2D"]
collision_layer = 8
collision_mask = 10
script = ExtResource("1_ja5ih")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2vmen")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_xy3nw")
animation = &"BulletDestroyed"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
